--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
             <div class="container px-5">
-                <a class="navbar-brand fw-bold" href="#page-top">IntelliWorks</a>
+                <a class="navbar-brand fw-bold" href="/">IntelliWorks</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="bi-list"></i>
@@ -214,8 +214,8 @@
         <footer class="bg-black text-center py-5">
             <div class="container px-5">
                 <div class="text-white-50 small">
-                    <div class="mb-2">&copy; Your Website 2022. All Rights Reserved.</div>
-                    <a href="#!">Privacy</a>
+                    <div class="mb-2">&copy; IntelliWorks.Org 2023. All Rights Reserved.</div>
+                    <a href="policy.html">Privacy</a>
                     <span class="mx-1">&middot;</span>
                     <a href="#!">Terms</a>
                     <span class="mx-1">&middot;</span>
