--- a/policy.html
+++ b/policy.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>New Age - Start Bootstrap Theme</title>
+    <title>IntelliWorks - Intelligent E-Commerce Solutions</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet"/>
@@ -24,7 +24,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
     <div class="container px-5">
-        <a class="navbar-brand fw-bold" href="#page-top">IntelliWorks</a>
+        <a class="navbar-brand fw-bold" href="/">IntelliWorks</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
@@ -306,7 +306,7 @@
 <footer class="bg-black text-center py-5">
     <div class="container px-5">
         <div class="text-white-50 small">
-            <div class="mb-2">&copy; IntelliWorks Org 2022. All Rights Reserved.</div>
+            <div class="mb-2">&copy; IntelliWorks.Org 2023. All Rights Reserved.</div>
             <a href="policy.html">Privacy</a>
             <span class="mx-1">&middot;</span>
             <a href="#!">Terms</a>
