--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                         <li class="nav-item"><a class="nav-link me-lg-3" href="policy.html">Policy</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="#features">Features</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="terms.html">Terms</a></li>
                         <li class="nav-item"><a class="nav-link me-lg-3" href="#download">Download</a></li>
                     </ul>
                     <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
@@ -217,7 +217,7 @@
                     <div class="mb-2">&copy; IntelliWorks.Org 2023. All Rights Reserved.</div>
                     <a href="policy.html">Privacy</a>
                     <span class="mx-1">&middot;</span>
-                    <a href="#!">Terms</a>
+                    <a href="terms.html">Terms</a>
                     <span class="mx-1">&middot;</span>
                     <a href="#!">FAQ</a>
                 </div>
