--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>IntelliWorks - Intelligent E-Commerce Solutions</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Google fonts-->
@@ -21,7 +26,10 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
             <div class="container px-5">
-                <a class="navbar-brand fw-bold" href="/">IntelliWorks</a>
+                <a class="navbar-brand fw-bold" href="/">
+                    <img src="assets/android-chrome-192x192.png" width="40px" class="navbar-brand">
+                    IntelliWorks
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="bi-list"></i>
